--- a/index.html
+++ b/index.html
@@ -2,9 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="./src/assets/img/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <meta name="description" content="credi card payment">
+    <meta name="author" content="Mateo Tavera">
+    <link rel="prefetch" href="src/App.jsx" as="document">
+    <link rel="preload" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css" as="style">
+    <title>Smart Shop</title>
   </head>
   <body>
     <div id="root"></div>
